deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui-service
spec:
  selector:
    app: ui-service
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  labels:
    app: ui-service
spec:
  selector:
    matchLabels:
      app: ui-service
  stategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ui-service
        tier: ui-service
    spec:
      serviceAccountName: default
      containers:
        - images: 774305578623.dkr.ecr.ap-southeast-1.amazonaws.com/ui-service-luan:dev
          name: ui-service
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: ui-service
